SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Deloitte_Airlines__c/Deloitte_Airlines__c.object-meta.xml
<CustomObject>
    <label>Deloitte Airlines</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Flight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deloitte Airlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>