SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Deloitte_Airlines__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>