SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Deloitte_Airlines__c/fields/Depart_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Depart_Arrive__c</fullName>
    <formula>IF(  ISPICKVAL( Flying_From__c , &quot;Manila&quot;), &quot;Manila &quot; , &quot;Sydney &quot;) &amp; &quot;-&quot; &amp; IF(ISPICKVAL( Flying_To__c , &quot;Manila&quot;), &quot;Manila&quot;, &quot;Sydney&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depart/Arrive</label>
    <type>Text</type>
</CustomField>