SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Deloitte_Airlines__c/fields/Fly_Baggage__c.field-meta.xml
<CustomField>
    <fullName>Fly_Baggage__c</fullName>
    <label>Fly + Baggage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>