SFDC TEST WITH MANIFEST v1/force-app/main/default/objects/Deloitte_Airlines__c/fields/Flying_To__c.field-meta.xml
<CustomField>
    <fullName>Flying_To__c</fullName>
    <label>Flying To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manila</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>